crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@sequence__all.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/sequence/all.mmd
---
{
  "kind": "sequence",
  "participants": [
    {
      "id": "user",
      "label": [
        "The user"
      ],
      "kind": "actor"
    },
    {
      "id": "app",
      "label": [
        "App"
      ],
      "kind": "box"
    },
    {
      "id": "db",
      "label": [
        "db"
      ],
      "kind": "box"
    }
  ],
  "autonumber": true,
  "items": [
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "solid arrow"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "dotted arrow"
      ],
      "stroke": "dotted",
      "tail": "none",
      "head": "arrow"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "solid line"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "none"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "dotted line"
      ],
      "stroke": "dotted",
      "tail": "none",
      "head": "none"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "solid cross"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "cross"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "dotted cross"
      ],
      "stroke": "dotted",
      "tail": "none",
      "head": "cross"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "solid async"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "open_arrow"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "dotted async"
      ],
      "stroke": "dotted",
      "tail": "none",
      "head": "open_arrow"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "both ways"
      ],
      "stroke": "solid",
      "tail": "arrow",
      "head": "arrow"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "both ways dotted"
      ],
      "stroke": "dotted",
      "tail": "arrow",
      "head": "arrow"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "app",
      "text": [
        "to itself"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow"
    },
    {
      "kind": "message",
      "from": "user",
      "to": "app",
      "text": [
        "activates app"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow"
    },
    {
      "kind": "activate",
      "participant": "app"
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "deactivates app"
      ],
      "stroke": "dotted",
      "tail": "none",
      "head": "arrow"
    },
    {
      "kind": "deactivate",
      "participant": "app"
    },
    {
      "kind": "activate",
      "participant": "db"
    },
    {
      "kind": "deactivate",
      "participant": "db"
    },
    {
      "kind": "note",
      "placement": {
        "left_of": "user"
      },
      "text": [
        "left"
      ]
    },
    {
      "kind": "note",
      "placement": {
        "right_of": "app"
      },
      "text": [
        "right"
      ]
    },
    {
      "kind": "note",
      "placement": {
        "over": "db"
      },
      "text": [
        "over"
      ]
    },
    {
      "kind": "note",
      "placement": {
        "spanning": [
          "user",
          "app"
        ]
      },
      "text": [
        "spanning",
        "two lines"
      ]
    },
    {
      "kind": "block",
      "operator": "loop",
      "sections": [
        {
          "label": [
            "every minute"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "db",
              "text": [
                "poll"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "block",
      "operator": "alt",
      "sections": [
        {
          "label": [
            "found"
          ],
          "items": [
            {
              "kind": "message",
              "from": "db",
              "to": "app",
              "text": [
                "row"
              ],
              "stroke": "dotted",
              "tail": "none",
              "head": "arrow"
            }
          ]
        },
        {
          "label": [
            "missing"
          ],
          "items": [
            {
              "kind": "message",
              "from": "db",
              "to": "app",
              "text": [
                "nothing"
              ],
              "stroke": "dotted",
              "tail": "none",
              "head": "arrow"
            }
          ]
        },
        {
          "items": [
            {
              "kind": "message",
              "from": "db",
              "to": "app",
              "text": [
                "error"
              ],
              "stroke": "dotted",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "block",
      "operator": "opt",
      "sections": [
        {
          "label": [
            "cache"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "app",
              "text": [
                "store"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "block",
      "operator": "par",
      "sections": [
        {
          "label": [
            "first"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "db",
              "text": [
                "read"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        },
        {
          "label": [
            "second"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "db",
              "text": [
                "write"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "block",
      "operator": "critical",
      "sections": [
        {
          "label": [
            "connect"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "db",
              "text": [
                "open"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        },
        {
          "label": [
            "timeout"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "user",
              "text": [
                "retry"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "block",
      "operator": "break",
      "sections": [
        {
          "label": [
            "failure"
          ],
          "items": [
            {
              "kind": "message",
              "from": "app",
              "to": "user",
              "text": [
                "error"
              ],
              "stroke": "solid",
              "tail": "none",
              "head": "arrow"
            }
          ]
        }
      ]
    },
    {
      "kind": "message",
      "from": "app",
      "to": "user",
      "text": [
        "highlighted"
      ],
      "stroke": "solid",
      "tail": "none",
      "head": "arrow"
    }
  ]
}
