crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@sequence__empty.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/sequence/empty.mmd
---
{
  "kind": "sequence",
  "participants": [],
  "items": []
}
